j--/tests/pass/Modulo.java
package pass;

public class Modulo {

	public int modulus(int x, int y) {
		return x%y;
	}

}
