j--/tests/fail/Modulo.java
package fail;

public class Modulo {

	public static void main(String[] args){
		System.out.println('a'%2);
	}

}
